--- a/views/workouts/new.ejs
+++ b/views/workouts/new.ejs
@@ -11,7 +11,7 @@
 
   <label>Body Part:</label>
   <select name="bodyPart">
-    <option value="Legs">Legs</option>
+    <option value="Legs and Glute">Legs and Glute</option>
     <option value="Back and Biceps">Back and Biceps</option>
     <option value="Shoulder and Triceps">Shoulder and Triceps</option>
     <option value="Full Body">Full Body</option>
@@ -19,7 +19,6 @@
   
   <input type="submit" value="Add Workout">
 </form>
-<p><%= errorMsg %></p>
+
 
 <%- include('../partials/footer') %>
-
