--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,12 @@
 <body>
   <nav id="nav-bar">
     <a href="/workouts">ALL WORKOUTS</a>
-    <a href="/workoutsessions">ALL WORKOUT TEMPLATES</a>
-    <a href="/workoutsessions/new">+ NEW WORKOUT TEMPLATE</a>
+    <a href="/workouts/new">ADD NEW WORKOUT</a>
+    <a href="/activities">ALL ACTIVITIES</a>
+    <a href="/activities/new">ADD NEW ACTIVITY</a>
+    <a href="/workoutsessions">ALL WORKOUT SESSIONS</a>
+    <a href="/workoutsessions/new">ADD NEW WORKOUT SESSION</a>
+    
     <!-- <a href="/workoutsessions/show">WORKOUT HISTORY</a>     -->
   </nav>
   <main>
