--- a/views/workoutsessions/new.ejs
+++ b/views/workoutsessions/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h2>Add Workout Template</h2>
+<h2>Add Workout Session</h2>
 <form id="new-form" action="/workoutsessions" method="POST">
     
     <label>Title:</label>
@@ -20,7 +20,7 @@
   <label>Completed:</label>
   <input type="checkbox" name="completed" >
   
-  <input type="submit" value="Add Template">
+  <input type="submit" value="Add Session">
 </form>
 
 
