--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,4 +20,15 @@ a {
   justify-content: space-evenly;
 }
 
+.review-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review-user img {
+  border-radius: 50%;
+  height: 40px;
+}
+
 
