--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,17 @@
 <body>
   <nav id="nav-bar">
     <a href="/workouts">ALL WORKOUTS</a>
+ <% if (user) { %>
     <a href="/workouts/new">ADD NEW WORKOUT</a>
     <a href="/activities">ALL ACTIVITIES</a>
     <a href="/activities/new">ADD NEW ACTIVITY</a>
     <a href="/workoutsessions">ALL WORKOUT SESSIONS</a>
     <a href="/workoutsessions/new">ADD NEW WORKOUT SESSION</a>
+    <a href="/logout">LOG OUT</a>
+  <% } else { %>
+    <a href="/auth/google" class="login">LOG IN</a>
+  <% } %>  
+      
     
     <!-- <a href="/workoutsessions/show">WORKOUT HISTORY</a>     -->
   </nav>
